🔒 Locked until release 🔒

--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Home | mechan.js</title>
+<title>🔒 Locked until release 🔒</title>
 
 <!-- Css -->
 <link rel="stylesheet" type="text/css" href="main.css">
